@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(opendchub, 0.8.0)
+AM_INIT_AUTOMAKE(opendchub, 0.8.1)
 AM_CONFIG_HEADER(config.h)
 AM_SANITY_CHECK
 AC_DEFINE(_GNU_SOURCE)
